fixed user building bug
